--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
 
 <section class="aboutme">
-    <h1>About Me</h1>
+    <h2>About Me</h2>
     <div class="container">
         <div class="grid-item">
             <p>blah blah blah</p>
@@ -33,7 +33,7 @@
 </section>
 
     <section class="mywork">
-        <h1>My Work</h1>
+        <h3>My Work</h3>
         <div class="project 1">
             <img src="images/img.png" alt="blank">
             <p>project title</p>
@@ -48,11 +48,15 @@
         </div>
     </section>
 
-    <div class="skills">
-        <h1>skills</h1>
-        <p>blah blah blah</p>
-        <img src="images/img.png" alt="blank">
+<section class="skills">
+    <h4>skills</h4>
+    <div class="container">
+        <div class="grid-item">
+            <p>blah blah blah</p>
+            <img src="images/img.png" alt="blank">
+        </div>
     </div>
+</section>
 
     <footer>
         <div>
@@ -64,6 +68,7 @@
             </ul>
          </div>   
     </footer>
+
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="js/index.js"></script>
 </body>
